# devtools-course-practice

code/paul-eduard/: CMakeLists.txt  CTestTests.txt
code/paul-eduard/application/: main.cpp
code/paul-eduard/include/: merge-sort-application.h  merge-sort.h
code/paul-eduard/src/: merge-sort-application.cxx  merge-sort.cxx
code/paul-eduard/test/: test_merge_sort.cpp  test_merge_sort_application.cpp
